# myCAD

./: .gitignore  Box.h  CMakeLists.txt  Camera.h  Geometry.h  README.md  Shader.h  imgui.ini  main.cpp  myCAD.sln  myCAD.vcxproj  myCAD.vcxproj.filters
shader/: default.fs  default.vs
